--- a/templates/base.html
+++ b/templates/base.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css' ) }}">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>{% block title %}{% endblock %}</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css' ) }}">
+  <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+            <img src="{{ url_for('static', filename='img/logo.svg' ) }}" alt="logo" width="100" height="100">Trade-In Auto
           </a>
-    
-          <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="/" class="nav-link px-2 link-secondary">Главная</a></li>
-            <li><a href="/about" class="nav-link px-2 link-dark">О нас</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
+
+          <ul class="nav col-12 col-md-auto mb-3 justify-content-center mb-md-0">
+            <li><a href="/" class="nav-link px-3 link-dark myclass">Главная</a></li>
+            <li><a href="#" class="nav-link px-3 link-dark myclass">Каталог</a></li>
+            <li><a href="#" class="nav-link px-3 link-dark myclass">Ссылки</a></li>
+            <li><a href="#" class="nav-link px-3 link-dark myclass">Ответы на вопросы</a></li>
+            <li><a href="/about" class="nav-link px-3 link-dark myclass">О нас</a></li>
           </ul>
-    
+
           <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2">Login</button>
-            <button type="button" class="btn btn-primary">Sign-up</button>
+            <button type="button" class="btn btn-outline-primary me-2 login">Вход</button>
+            <button type="button" class="btn btn-primary login">Регистрация</button>
           </div>
         </header>
       </div>
