add page benifit, edit logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,10 @@
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <img src="{{ url_for('static', filename='img/logo.svg' ) }}" alt="logo" width="100" height="100">Trade-In Auto
+            <img src="{{ url_for('static', filename='img/logoFinal.jpg' ) }}" alt="logo" width="250" height="70">Trade-In Auto
           </a>
 
-          
+
           <ul class="nav col-12 col-md-auto mb-3 justify-content-center mb-md-0">
             <li><a href="/" class="nav-link px-3 link-dark myclass">Главная</a></li>
             <li><a href="#" class="nav-link px-3 link-dark myclass">Каталог</a></li>
