--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -10,3 +10,16 @@
   border-radius: 15px;
   width: auto;
 }
+
+.articles_block{
+  margin-bottom: 40px;
+}
+
+.blockquote-1{
+  border-left: 4px solid #0d6efd;
+  font-size: 17px;
+  font-style: italic;
+  margin: 16px;
+  padding: 16px, 24px;
+  position: relative;
+}
