--- a/templates/benefit.html
+++ b/templates/benefit.html
@@ -14,7 +14,7 @@
 
       <article class="blog-post">
         <h2 class="blog-post-title mb-1">Чем выгодна программа Trade-In?</h2>
-        <p class="blog-post-meta">December 25, 2022 by <a href="#">Michail</a></p>
+        <p class="blog-post-meta">December 25, 2022 by <a href="/mypage">Michail</a></p>
 
         <hr>
         <div class="articles_block">
