--- a/templates/index.html
+++ b/templates/index.html
@@ -11,25 +11,28 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
         <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+            <img src="{{ url_for('static', filename='img/Trade-inFinal.jpg' ) }}" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title>
 
             <h2 class="fw-normal">Чем выгодна программа Trade-In?</h2>
             <p>В этой статье мы вкратце опишем Вам, почему Trade-In выгоден, его множество плюсов и ничтожное колличество минусов.</p>
             <p><a class="btn btn-secondary" href="/benefit">Подробнее »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title>
 
-            <h2 class="fw-normal">Heading</h2>
-            <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-            <p><a class="btn btn-secondary" href="#">View details »</a></p>
+            <h2 class="fw-normal">Михаил Леонов</h2>
+            <br>
+            <p>Профиль</p>
+            <br>
+            <br>
+            <p><a class="btn btn-secondary" href="/mypage">Подробнее »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-            <h2 class="fw-normal">Heading</h2>
-            <p>And lastly this, the third column of representative placeholder content.</p>
-            <p><a class="btn btn-secondary" href="#">View details »</a></p>
+            <h2 class="fw-normal">Пример плохой продажи авто</h2>
+            <p>Расскажем и покажем почему покупка автомобиля на вторичном рынке чревато проблемами</p>
+            <p><a class="btn btn-secondary" href="/badauto">Подробнее »</a></p>
         </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
