--- a/templates/base.html
+++ b/templates/base.html
@@ -19,11 +19,11 @@
 
 
           <ul class="nav col-12 col-md-auto mb-3 justify-content-center mb-md-0">
-            <li><a href="/" class="nav-link px-3 link-dark myclass">Главная</a></li>
-            <li><a href="#" class="nav-link px-3 link-dark myclass">Каталог</a></li>
-            <li><a href="#" class="nav-link px-3 link-dark myclass">Ссылки</a></li>
-            <li><a href="#" class="nav-link px-3 link-dark myclass">Ответы на вопросы</a></li>
-            <li><a href="/about" class="nav-link px-3 link-dark myclass">О нас</a></li>
+            <li><a href="/" class="nav-link px-3 link-dark btn myclass">Главная</a></li>
+            <li><a href="#" class="nav-link px-3 link-dark btn myclass">Каталог</a></li>
+            <li><a href="#" class="nav-link px-3 link-dark btn myclass">Ссылки</a></li>
+            <li><a href="#" class="nav-link px-3 link-dark btn myclass">Ответы на вопросы</a></li>
+            <li><a href="/about" class="nav-link px-3 link-dark btn myclass">О нас</a></li>
           </ul>
 
           <div class="col-md-3 text-end">
