--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -29,7 +29,7 @@
             <p class="text-muted mb-1">Full Stack Developer(student)</p>
             <p class="text-muted mb-4">Россия, Москва</p>
             <div class="d-flex justify-content-center mb-2">
-              <button type="button" class="btn btn-outline-primary">Message</button>
+              <button class="btn btn-outline-primary" type="submit" onclick="alert('С Вами скоро свяжутся!')">Связаться</button>
             </div>
           </div>
         </div>
