--- a/templates/index.html
+++ b/templates/index.html
@@ -95,12 +95,10 @@
         </blockquote>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-          height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-          preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-        </svg>
+        <img src="{{ url_for('static', filename='img/docs.png') }}"
+          class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+          role="img">
+        <title>Placeholder</title>
 
       </div>
     </div>
@@ -111,17 +109,21 @@
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span>
         </h2>
-        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really
-          intended to be actually read, simply here to give you a better view of what this would look like with some
-          actual content. Your content.</p>
+        <p class="lead">-Рекомендую! Отличный центр Trade-in. Авто, на любой
+          вкус, цвет и кошелек. Сотрудники все опытные, грамотные, на любые вопросы отвечают четко и быстро. Очень
+          удивила чистота в салоне, ни пылинки, машины все блестят снутри и снаружи. Отличное место!
+          <br>
+          <br>
+          -Хочу выразить благодарность центру Trade-In Auto. Купила в салоне автомобиль, осталась очень
+          довольна!!! Эмоции переполняли, как нас встретили, как быстро оформили документы, чисто чётко и без всякого
+          обмана!!! Спасибо вам огромное!!!
+        </p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-          height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-          preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-        </svg>
+        <img src="{{ url_for('static', filename='img/react.png') }}"
+          class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+          role="img">
+        <title>Placeholder</title>
 
       </div>
     </div>
