--- a/templates/auto/tesla.html
+++ b/templates/auto/tesla.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Страница про нас
+Tesla Model X
 {% endblock %}
 
 {% block body %}
@@ -41,7 +41,8 @@
 
         </p>
         <div class="d-flex">
-          <button class="btn btn-outline-dark flex-shrink-0" type="submit" onclick="alert('Заказ принят в обработку, с Вами обязательно свяжутся')">
+          <button class="btn btn-outline-dark flex-shrink-0" type="submit"
+            onclick="alert('Заказ принят в обработку, с Вами обязательно свяжутся')">
             <i class="bi-cart-fill me-1"></i>
             Заказать
           </button>
@@ -51,4 +52,3 @@
   </div>
 </section>
 {% endblock %}
-
