--- a/templates/benefit.html
+++ b/templates/benefit.html
@@ -186,7 +186,7 @@
 
       <nav class="blog-pagination" aria-label="Pagination">
         <a class="btn btn-outline-primary rounded-pill" href="/">Назад</a>
-        <a class="btn btn-outline-primary rounded-pill" href="/">Вперед</a>
+        <a class="btn btn-outline-primary rounded-pill" href="/badauto">Вперед</a>
       </nav>
 
     </div>
