--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">Что вообще такое Трейд-ин? <span class="text-muted">Простыми
-            словами</span></h2>
+            словами.</span></h2>
         <p class="lead">Трейд-ин (trade in) — система покупки, при которой покупатель отдаёт продавцу старый товар в
           зачёт части стоимости нового. Проще говоря, трейд-ин — это обмен старого товара на новый с доплатой. По
           трейд-ин можно приобрести не только автомобиль, но и смартфон, бытовую технику, промышленное оборудование и
@@ -107,7 +107,7 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span>
+        <h2 class="featurette-heading fw-normal lh-1">Ваши отзывы.
         </h2>
         <p class="lead">-Рекомендую! Отличный центр Trade-in. Авто, на любой
           вкус, цвет и кошелек. Сотрудники все опытные, грамотные, на любые вопросы отвечают четко и быстро. Очень
