--- a/templates/base.html
+++ b/templates/base.html
@@ -1,50 +1,56 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css' ) }}">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css' ) }}">
   <title>{% block title %}{% endblock %}</title>
 </head>
+
 <body>
-    <div class="container">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-          <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <img src="{{ url_for('static', filename='img/logoFinal.jpg' ) }}" alt="logo" width="250" height="70">Trade-In Auto
-          </a>
+  <div class="container">
+    <header
+      class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+        <img src="{{ url_for('static', filename='img/logoFinal.jpg' ) }}" alt="logo" width="250" height="70">Trade-In
+        Auto
+      </a>
 
 
-          <ul class="nav col-12 col-md-auto mb-3 justify-content-center mb-md-0">
-            <li><a href="/" class="nav-link px-3 link-dark btn myclass">Главная</a></li>
-            <li><a href="/catalog" class="nav-link px-3 link-dark btn myclass">Каталог</a></li>
-            <li><a href="#" class="nav-link px-3 link-dark btn myclass">Ссылки</a></li>
-            <li><a href="#" class="nav-link px-3 link-dark btn myclass">Ответы на вопросы</a></li>
-            <li><a href="/about" class="nav-link px-3 link-dark btn myclass">О нас</a></li>
-          </ul>
+      <ul class="nav col-12 col-md-auto mb-3 justify-content-center mb-md-0">
+        <li><a href="/" class="nav-link px-3 link-dark btn myclass">Главная</a></li>
+        <li><a href="/catalog" class="nav-link px-3 link-dark btn myclass">Каталог</a></li>
+        <li><a href="/urls" class="nav-link px-3 link-dark btn myclass">Ссылки</a></li>
+        <li><a href="/FAQs" class="nav-link px-3 link-dark btn myclass">Ответы на вопросы</a></li>
+        <li><a href="/about" class="nav-link px-3 link-dark btn myclass">О нас</a></li>
+      </ul>
 
-          <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2 login">Вход</button>
-            <button type="button" class="btn btn-primary login">Регистрация</button>
-          </div>
-        </header>
+      <div class="col-md-3 text-end">
+        <a href="/login"><button type="button" class="btn btn-outline-primary me-2 login">Вход</button></a>
+        <a href="/registration"><button type="button" class="btn btn-primary login">Регистрация</button></a>
       </div>
-    {% block body %}{% endblock %}
+    </header>
+  </div>
+  {% block body %}{% endblock %}
 
-    <div class="container">
-        <footer class="py-3 my-4">
-          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Главная</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Каталог</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ссылки</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ответы на вопросы</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">О нас</a></li>
-          </ul>
-          <p class="text-center text-muted">© 2022 Trade-In Auto</p>
-        </footer>
-      </div>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Главная</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Каталог</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ссылки</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ответы на вопросы</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">О нас</a></li>
+      </ul>
+      <p class="text-center text-muted">© 2022 Trade-In Auto</p>
+    </footer>
+  </div>
 </body>
+
 </html>
