--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -29,7 +29,8 @@
             <p class="text-muted mb-1">Full Stack Developer(student)</p>
             <p class="text-muted mb-4">Россия, Москва</p>
             <div class="d-flex justify-content-center mb-2">
-              <button class="btn btn-outline-primary" type="submit" onclick="alert('С Вами скоро свяжутся!')">Связаться</button>
+              <button class="btn btn-outline-primary" type="submit"
+                onclick="alert('С Вами скоро свяжутся!')">Связаться</button>
             </div>
           </div>
         </div>
@@ -108,28 +109,28 @@
                 </p>
                 <p class="mb-1" style="font-size: .77rem;">Вэб Дизайн</p>
                 <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
                 <p class="mt-4 mb-1" style="font-size: .77rem;">Разметка Сайта</p>
                 <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
                 <p class="mt-4 mb-1" style="font-size: .77rem;">Одностраничные сайты</p>
                 <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 89%" aria-valuenow="89"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
                 <p class="mt-4 mb-1" style="font-size: .77rem;">Мобильный шаблон</p>
                 <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
                 <p class="mt-4 mb-1" style="font-size: .77rem;">Внутренний API</p>
                 <div class="progress rounded mb-2" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0"
+                    aria-valuemax="100"></div>
                 </div>
               </div>
             </div>
