--- a/templates/base.html
+++ b/templates/base.html
@@ -43,10 +43,10 @@
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Главная</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Каталог</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ссылки</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ответы на вопросы</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">О нас</a></li>
+        <li class="nav-item"><a href="/catalog" class="nav-link px-2 text-muted">Каталог</a></li>
+        <li class="nav-item"><a href="/urls" class="nav-link px-2 text-muted">Ссылки</a></li>
+        <li class="nav-item"><a href="FAQs" class="nav-link px-2 text-muted">Ответы на вопросы</a></li>
+        <li class="nav-item"><a href="/about" class="nav-link px-2 text-muted">О нас</a></li>
       </ul>
       <p class="text-center text-muted">© 2022 Trade-In Auto</p>
     </footer>
